# OpenScanProxy

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  KNOWN_ISSUES.md  README.md  build.sh  deploy.sh  test.sh
cmd/openscanproxy/: main.cpp
configs/: config.docker.json  config.json  domain_categories.csv
docker/: Dockerfile  Dockerfile.test  docker-compose.yml  entrypoint.sh  init.sql
docs/: build-and-test-scripts.md  chunked-trailer.md  database-schema.md  integration-tests.md  mvp-roadmap.md  policy-matching.md  portal-auth-ip-cache-notes.md  tls-leaf-cache.md
include/openscanproxy/admin/: admin_server.hpp
include/openscanproxy/audit/: audit.hpp
include/openscanproxy/auth/: auth_portal_server.hpp
include/openscanproxy/config/: config.hpp
include/openscanproxy/core/: logger.hpp  types.hpp  util.hpp
include/openscanproxy/extractor/: extractor.hpp
include/openscanproxy/http/: http_message.hpp
include/openscanproxy/policy/: policy.hpp  policy_store.hpp
include/openscanproxy/proxy/: proxy_server.hpp  runtime.hpp
include/openscanproxy/scanner/: scanner.hpp
include/openscanproxy/stats/: stats.hpp
include/openscanproxy/test/: net_helpers.hpp
include/openscanproxy/tlsmitm/: tls_mitm.hpp
scripts/: cloc.sh  download_domain_categories.py
src/admin/: admin_server.cpp
src/audit/: audit.cpp
src/auth/: auth_portal_server.cpp
src/config/: config.cpp
src/core/: logger.cpp  util.cpp
src/extractor/: extractor.cpp
src/http/: http_message.cpp
src/policy/: policy.cpp  policy_store.cpp
src/proxy/: proxy_server.cpp
src/scanner/: clamav_scanner.cpp  mock_scanner.cpp
src/stats/: stats.cpp
src/test/: net_helpers.cpp
src/tlsmitm/: tls_mitm.cpp
tests/: config_test.cpp  extractor_test.cpp  http_message_test.cpp  http_protocol_test.cpp  integration_test.cpp  policy_test.cpp  stats_test.cpp  util_test.cpp
web/: index.html  package-lock.json  package.json
web/src/: App.vue  api.js  router.js  style.css
web/src/components/: KpiCards.vue  LogsTable.vue  PolicySwitch.vue  SearchableUserSelect.vue  SystemConfig.vue
web/src/pages/: AuthConfigPage.vue  DashboardPage.vue  LoginPage.vue  LogsPage.vue  PolicyPage.vue
